2008-06-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Returns cached data only when the previous receiveHandshake() is called
	with peek = true.
	* src/PeerConnection.cc (receiveHandshake)
	* src/PeerConnection.h (receiveHandshake)

2008-06-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed default value of -s option from 1 to 5.
	Also max value of -s option is changed from 5 to 16.
	* src/HelpItemFactory.cc
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-06-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed -s options behavior. Now it means the number of connections
	made simultaneously in each http/ftp download.
	If 1 URL is specified, the behavior is the same with old implementation.
	If -s N is given and more than N URLs are specified, first N URLs are
	used and remaining URLs are used for backup. If less than N URLs are
	specified, some of URLs are used more than once so that totally N
	connections are made simultaneously.
	* src/main.cc

2008-06-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Included missing iosfwd or ostream header.
	* src/RequestGroupMan.cc
	* src/TaggedItem.cc
	* src/TaggedItem.h
	* src/Util.cc

2008-06-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/HttpHeaderProcessor.cc: Rewritten using std::string as a buffer.
	* src/HttpHeaderProcessor.h: Rewritten using std::string as a buffer.
	* src/HttpConnection.cc: Included missing sstream.
	
2008-06-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --bt-max-open-files option.
	* src/DefaultPieceStorage.cc
	* src/HelpItemFactory.cc
	* src/MultiDiskAdaptor.cc
	* src/MultiDiskAdaptor.h
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	
2008-06-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that aria2 aborts when a path to a directory is given
	in command-line.
	* src/ProtocolDetector.cc
	