@@ -219,13 +219,13 @@ void DefaultPeerStorageTest::testReturnPeer()
   ps.addPeer(peer2);
   ps.addPeer(peer3);
 
-  ps.returnPeer(peer2);
-  // peer2 is moved to the end of container
-  CPPUNIT_ASSERT_EQUAL(std::string("192.168.0.2"),
-		       ps.getPeers().back()->ipaddr);
+  ps.returnPeer(peer2); // peer2 removed from the container
+  CPPUNIT_ASSERT_EQUAL((size_t)2, ps.getPeers().size());
+  CPPUNIT_ASSERT(std::find(ps.getPeers().begin(), ps.getPeers().end(), peer2)
+		 == ps.getPeers().end());
 
   ps.returnPeer(peer1); // peer1 is removed from the container
-  CPPUNIT_ASSERT_EQUAL((size_t)2, ps.getPeers().size());
+  CPPUNIT_ASSERT_EQUAL((size_t)1, ps.getPeers().size());
   CPPUNIT_ASSERT(std::find(ps.getPeers().begin(), ps.getPeers().end(), peer1) == ps.getPeers().end());
 }
 
