@@ -1,3 +1,12 @@
+2008-06-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Always remove a peer from cache in DefaultPeerStorage::returnPeer(),
+	to make room more fleshy, recently found peers.
+	Peer::_badConditionStartTime is not used anymore. Consider to remove
+	it.
+	* src/DefaultPeerStorage.cc
+	* test/DefaultPeerStorageTest.cc
+	
 2008-06-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Returns cached data only when the previous receiveHandshake() is called
